--- a/css/fonts.css
+++ b/css/fonts.css
@@ -4,38 +4,62 @@
 */
 h1,
 .h1,
-.font-5 {
-  font-size: 200%;
+.font-6 {
+  --heading-size: calc(
+    var(--heading-start) -
+      (0 * (var(--heading-start) - var(--heading-end)) / 5)
+  );
+  font-size: var(--heading-size);
 }
 
 h2,
 .h2,
-.font-4 {
-  font-size: 180%;
+.font-5 {
+  --heading-size: calc(
+    var(--heading-start) -
+      (1 * (var(--heading-start) - var(--heading-end)) / 5)
+  );
+  font-size: var(--heading-size);
 }
 
 h3,
 .h3,
-.font-3 {
-  font-size: 160%;
+.font-4 {
+  --heading-size: calc(
+    var(--heading-start) -
+      (2 * (var(--heading-start) - var(--heading-end)) / 5)
+  );
+  font-size: var(--heading-size);
 }
 
 h4,
 .h4,
-.font-2 {
-  font-size: 140%;
+.font-3 {
+  --heading-size: calc(
+    var(--heading-start) -
+      (3 * (var(--heading-start) - var(--heading-end)) / 5)
+  );
+  font-size: var(--heading-size);
 }
 
 h5,
 .h5,
-.font-1 {
-  font-size: 120%;
+.font-2 {
+  --heading-size: calc(
+    var(--heading-start) -
+      (4 * (var(--heading-start) - var(--heading-end)) / 5)
+  );
+  font-size: var(--heading-size);
 }
 
 h6,
 .h6,
-.font-0 {
-  font-size: 100%;
+.font-1 {
+  --heading-size: calc(
+    var(--heading-start) -
+      (5 * (var(--heading-start) - var(--heading-end)) / 5)
+  );
+  font-size: var(--heading-size);
 }
 
 /*# sourceMappingURL=fonts.css.map */
