--- a/css/menu.css
+++ b/css/menu.css
@@ -156,7 +156,7 @@
   position: relative;
 }
 .sidemenu .nav-menu .nav-item > * {
-  position: relative;
+  /* position: relative; */
   z-index: 1;
 }
 .sidemenu .nav-menu .nav-item::before {
