--- a/styles/fonts.scss
+++ b/styles/fonts.scss
@@ -2,16 +2,15 @@
 * @Author Vixson
 * @Description Font variables and Logics
 */
-$heading-start: (k: 1, v: 200);
-$heading-end: (k: 6, v: 100);
-$heading-difference: (map-get($heading-start, 'v') - map-get($heading-end, 'v')) / (map-get($heading-end, 'k') - map-get($heading-start, 'k'));
 
-@for $n from map-get($heading-start, 'k') through map-get($heading-end, 'k') {
-  $_value: map-get($heading-start, 'v') - (($n - 1) * $heading-difference);
-
+@for $n from 1 through 6 {
   h#{$n},
   .h#{$n},
-  .font-#{map-get($heading-end, 'k') - $n} {
-    font-size: #{$_value}#{'%'};
+  .font-#{7 - $n} {
+    --heading-size: calc(
+      var(--heading-start) -
+        (#{$n - 1} * (var(--heading-start) - var(--heading-end)) / 5)
+    );
+    font-size: var(--heading-size);
   }
 }
