--- a/styles/helper/primefaces.scss
+++ b/styles/helper/primefaces.scss
@@ -46,14 +46,14 @@
 .p-dialog-mask,
 .p-component-overlay,
 .p-dialog-mask.p-component-overlay {
-  z-index: 4 !important;
+  z-index: 4;
 }
 
 .p-dialog {
   min-width: 50%;
   max-width: 95%;
   max-height: 95%;
-  z-index: 1 !important;
+  z-index: 1;
 
   .p-confirm-dialog .p-confirm-dialog-icon {
     font-size: 300%;
@@ -156,7 +156,7 @@ p-chart {
 }
 
 .p-calendar {
-  width: 100%;
+  /* width: 100%; */
 
   .p-datepicker {
     min-width: unset;
