--- a/styles/menu.scss
+++ b/styles/menu.scss
@@ -13,7 +13,6 @@
   flex-basis: 15%;
 
   .menu-header {
-
     .menu-logo,
     .appmenu-toggle {
       display: none;
@@ -31,13 +30,12 @@
   }
 
   .icon {
-    margin-right: 0;
+    /* margin-right: 0; */
   }
 
   .menu-header,
   .menu-footer,
   .nav-menu {
-
     .nav-item,
     .nav-title {
       .label {
@@ -51,7 +49,8 @@
       border-bottom: thin solid;
       padding: 0;
 
-      &::before {}
+      &::before {
+      }
     }
   }
 }
@@ -74,18 +73,15 @@
   }
 
   &:checked {
-
     ~,
-    ~* {
-
+    ~ * {
       .sidemenu.md {
         opacity: 1;
         @include md-toggled-sidemenu;
       }
 
       .page {
-
-        >footer {
+        > footer {
           background-color: var(--primary);
           color: var(--primary-c);
         }
@@ -94,16 +90,13 @@
   }
 
   &:not(:checked) {
-
     ~,
-    ~* {
-
+    ~ * {
       .menu-logo-alt {
         display: none;
       }
     }
   }
-
 }
 
 .appmenu-toggle {
@@ -168,7 +161,7 @@
   }
 
   ::-webkit-scrollbar-thumb {
-    background-color: currentColor
+    background-color: currentColor;
   }
 
   .menu-header {
@@ -194,7 +187,7 @@
       }
 
       &.active {
-        border-right: 2px solid;
+        /* border-right: 2px solid; */
 
         &::before {
           opacity: 0.25;
@@ -211,12 +204,11 @@
         white-space: nowrap;
       }
     }
-
   }
 
   .icon {
-    margin: 0.125rem 1em;
-    margin-left: 0;
+    // margin: 0.125rem 1em;
+    // margin-left: 0;
   }
 
   footer,
@@ -277,19 +269,15 @@
   width: 100%;
   flex: 1 1 100%;
   // border: thin solid var(--white);
-  transition: margin 0.2s
+  transition: margin 0.2s;
 }
 
 /* Above <---> Tablets/Mini PC */
-@media (min-width:768px) {
-
+@media (min-width: 768px) {
   .appmenu-trigger {
-
     &:checked {
-
       ~,
-      ~* {
-
+      ~ * {
         .sidemenu {
           width: 0;
           flex-basis: 0;
@@ -300,10 +288,8 @@
     }
 
     &:not(:checked) {
-
       ~,
-      ~* {
-
+      ~ * {
         .sidemenu.minimized {
           @include md-toggled-sidemenu;
         }
@@ -312,24 +298,19 @@
           .appmenu-toggle {
             display: none;
           }
-
         }
       }
     }
-
   }
-
 }
 
 /* Above <---> Mobile */
-@media (min-width:576px) {
-
+@media (min-width: 576px) {
   .floatmenu,
   .fullmenu {
     align-items: center;
 
     .menu-header {
-
       // .menu-logo,
       .appmenu-toggle {
         display: none;
@@ -342,7 +323,6 @@
   }
 
   .appmenu-trigger {
-
     &,
     &::before,
     &::after {
@@ -350,9 +330,8 @@
     }
 
     &:not(:checked) {
-
       ~,
-      ~* {
+      ~ * {
         .page {
           /* TODO: Use this on Sibemenu Type 2 - Page overlaps Sidemenu */
           /* 
@@ -369,29 +348,24 @@
   }
 }
 
-
 /* Mobile <---> Tablets/Mini PC */
-@media (min-width:576px) and (max-width:767.98px) {
+@media (min-width: 576px) and (max-width: 767.98px) {
   .appmenu-trigger {
-
     &:not(:checked) {
-
       ~,
-      ~* {
-
-        .sidemenu *> {
+      ~ * {
+        .sidemenu * > {
           .label {
-            transition: position 0.25s linear 0.125s, transform 0.25s linear 0.125s, opacity 0.5s linear 0.125s;
+            transition: position 0.25s linear 0.125s,
+              transform 0.25s linear 0.125s, opacity 0.5s linear 0.125s;
           }
         }
       }
     }
 
-
     &:checked {
-
       ~,
-      ~* {
+      ~ * {
         .sidemenu {
           @include md-toggled-sidemenu;
         }
@@ -400,7 +374,6 @@
   }
 
   .sidemenu {
-
     .btn,
     .nav-menu .nav-item {
       padding-left: 1rem;
@@ -418,18 +391,16 @@
 }
 
 /* Tablets/Mini PC <---> BELOW */
-@media (max-width:767.98px) {
+@media (max-width: 767.98px) {
   .sidemenu .btn {
     min-width: auto;
   }
 }
 
 /* Mobile <--> BELOW */
-@media (max-width:575.98px) {
+@media (max-width: 575.98px) {
   .appmenu-trigger {
-
     &:not(:checked) {
-
       &,
       &::before,
       &::after {
@@ -437,8 +408,7 @@
       }
 
       ~,
-      ~* {
-
+      ~ * {
         .fullmenu {
           .nav-menu {
             display: none;
@@ -448,7 +418,7 @@
         }
 
         // 3, Floatmenu
-        .floatmenu>*:not(.appmenu-toggle) {
+        .floatmenu > *:not(.appmenu-toggle) {
           display: none;
         }
       }
@@ -460,15 +430,14 @@
       z-index: 2;
 
       ~,
-      ~* {
-
+      ~ * {
         // 1. Sidemenu
         .sidemenu {
           transform: translateX(0);
           opacity: 1;
 
           .appmenu-toggle {
-            transform: translateX(0)
+            transform: translateX(0);
           }
 
           .menu-logo-alt {
@@ -478,7 +447,11 @@
 
         // 2. Fullmenu
         .fullmenu {
-          --background-color: hsla(var(--secondary-hs), var(--secondary-l), 0.125);
+          --background-color: hsla(
+            var(--secondary-hs),
+            var(--secondary-l),
+            0.125
+          );
           position: fixed;
           flex-direction: column;
           transform: translateY(0);
@@ -507,7 +480,7 @@
             }
 
             .menu-logo-alt {
-              fill: var(--white)
+              fill: var(--white);
             }
 
             .silhouette {
@@ -526,7 +499,7 @@
         }
 
         .page .app-header .appmenu-toggle {
-          transform: translateX(-50%)
+          transform: translateX(-50%);
         }
       }
     }
@@ -554,14 +527,15 @@
     /* opacity: 0; */
     z-index: 2;
 
-    .appmenu-trigger:not(:checked) & {}
+    .appmenu-trigger:not(:checked) & {
+    }
 
     // .nav-menu {
     //   display: none;
     // }
 
     .menu-header {
-      width: 100%
+      width: 100%;
     }
   }
 
@@ -585,7 +559,6 @@
   }
 
   .page {
-
     .page-content {
       padding: 3em 1em;
     }
